--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.3.0",
     "mongoose": "^7.2.2",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.9.0"
   },
   "devDependencies": {
