--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^5.3.0",
     "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.5",
     "validator": "^13.9.0"
   },
   "devDependencies": {
